Added in GC settings. Last test was using stale JAR so wasn't correctg.